@@ -223,3 +223,5 @@ windows-1255.so      0x6e030000 0x00010000
 windows-1256.so      0x6e020000 0x00010000
 windows-1257.so      0x6e010000 0x00010000
 windows-1258.so      0x6e000000 0x00010000
+osd_ebcdic_df04_1.so  0x6dff0000 0x00010000
+osd_ebcdic_df04_15.so 0x6dfe0000 0x00010000
