@@ -17,15 +17,13 @@ dnl This is required by autoconf!
 AC_PROG_AWK
 
 dnl compute the top directory of the build
-abs_srcdir=`(cd $srcdir && pwd)`
-abs_builddir=`pwd`
-top_builddir="$abs_builddir"
+# Absolute source/build directory
+api_srcdir=`(cd $srcdir && pwd)`
+api_builddir=`pwd`
+AC_SUBST(api_srcdir)
+AC_SUBST(api_builddir)
 
-AC_SUBST(abs_srcdir)
-AC_SUBST(abs_builddir)
-AC_SUBST(top_builddir)
-
-if test "$abs_builddir" != "$abs_srcdir"; then
+if test "$api_builddir" != "$api_srcdir"; then
   USE_VPATH=1
 fi
 
@@ -33,17 +31,17 @@ dnl check for APR
 API_FIND_APR
 
 dnl copy apr's rules.mk into our build directory.
-if test ! -d $abs_builddir/build ; then
-  mkdir $abs_builddir/build
+if test ! -d $api_builddir/build ; then
+  mkdir $api_builddir/build
 fi
-cp $APR_BUILD_DIR/apr_rules.mk $abs_builddir/build/rules.mk
+cp $APR_BUILD_DIR/apr_rules.mk $api_builddir/build/rules.mk
 
 dnl
 dnl set up the compilation flags and stuff
 dnl
-API_INCLUDES="-I$abs_builddir/lib -I$abs_builddir/include"
+API_INCLUDES="-I$api_builddir/lib -I$api_builddir/include"
 if test -n "$USE_VPATH"; then
-  API_INCLUDES="$API_INCLUDES -I$abs_srcdir/lib -I$abs_srcdir/include"
+  API_INCLUDES="$API_INCLUDES -I$api_srcdir/lib -I$api_srcdir/include"
 fi
 
 AC_SUBST(API_INCLUDES)
@@ -61,10 +59,10 @@ dnl BSD/OS (BSDi) needs to use a different include syntax in the Makefiles
 dnl
 case "$host_alias" in
 *bsdi*)
-    INCLUDE_RULES=".include \"$abs_builddir/build/rules.mk\""
+    INCLUDE_RULES=".include \"$api_builddir/build/rules.mk\""
     ;;
 *)
-    INCLUDE_RULES="include $abs_builddir/build/rules.mk"
+    INCLUDE_RULES="include $api_builddir/build/rules.mk"
     ;;
 esac
 AC_SUBST(INCLUDE_RULES)
